# CarlaLegacy

pc-parse/: .gitignore  INSTALL  INSTALL.DOS  INSTALL.Mac  LICENSE  Makefile  Makefile.in  Pcparse-2003.sln  Pcparse-2005.sln  Pcparse-2008.sln  Pcparse-2010.sln  Pcparse-2015.sln  Pcparse.dsw  Pcparse.sln  Projects.hqx  README  UpgradeLog.htm  acconfig.h  aclocal.m4  config.DOS  config.Mac  config.hin  configure  configure.bat  configure.in  install-sh  stamp-h.in  winconfig.bat
pc-parse/PumpMessages/: PumpMessages.c  PumpMessages.vcproj
pc-parse/ToneGen/: Makefile.in  ToneGen-2005.vcproj  ToneGen-2008.vcproj  ToneGen-2010.vcxproj  ToneGen-2015.vcxproj  ToneGen.dsp  ToneGen.vcproj  ToneGen.vcxproj  ToneGen.vcxproj.filters  tonegen.c  version.h
pc-parse/TonePGLib/: DOMAIN.C  Makefile.in  Syllable.c  TRULE_LS.H  ToneGLib-2003.vcproj  ToneGLib-2005.vcproj  ToneGLib-2008.vcproj  ToneGLib-2010.vcxproj  ToneGLib-2015.vcxproj  ToneGLib.dsp  ToneGLib.vcproj  ToneGLib.vcxproj  ToneGLib.vcxproj.filters  TonePLib-2005.vcproj  TonePLib-2008.vcproj  TonePLib-2010.vcxproj  TonePLib-2015.vcxproj  TonePLib.dsp  TonePLib.vcproj  TonePLib.vcxproj  TonePLib.vcxproj.filters  Trule_ls.c  domain.h  loadseg.c  moras.c  pword.c  segparse.c  syllable.c  sytest_y.h  tbu.c  tone.c  tone.h  toneanal.c  toneanal.h  tonepars.h  trule.h  trule_ls.c  trule_ls.l  trule_yg.c  trule_yg.h  (+3 more)
pc-parse/TonePars/: Makefile.in  TonePars-2003.vcproj  TonePars-2005.vcproj  TonePars-2008.vcproj  TonePars-2010.vcxproj  TonePars-2015.vcxproj  TonePars.dsp  TonePars.vcproj  TonePars.vcxproj  TonePars.vcxproj.filters  TonedAllos.css  TonedAllos.htm  tonepars.c  version.h
pc-parse/ample/: Ample-2005.vcproj  Ample-2008.vcproj  Ample-2010.vcxproj  Ample-2015.vcxproj  Ample.dsp  Ample.vcproj  Ample.vcxproj  AmpleChanges.txt  AmpleTrcXml.dtd  Ampledll-2005.vcproj  Ampledll-2008.vcproj  Ampledll-2010.vcxproj  Ampledll-2015.vcxproj  Ampledll.dsp  Ampledll.plg  Ampledll.vcproj  Ampledll.vcxproj  Amplelib-2005.vcproj  Amplelib-2008.vcproj  Amplelib-2010.vcxproj  Amplelib-2015.vcxproj  Amplelib.dsp  Amplelib.vcproj  Amplelib.vcxproj  Llample-2005.vcproj  Llample-2008.vcproj  Llample-2010.vcxproj  Llample-2015.vcxproj  Llample.dsp  Llample.vcproj  Llample.vcxproj  Makefile  Makefile.dj  Makefile.in  PartialRedupHandling.txt  Testdll-2005.vcproj  (+94 more)
(+3098 files in other folders)
